fix modal trophy

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
         </div>
 
         <modal-profile></modal-profile>
+        <modal-trophy></modal-trophy>
 
         <div id="modal-disconnect" 
              class="app-modal app-modal__bg" 
