--- a/public/index.html
+++ b/public/index.html
@@ -112,15 +112,21 @@
                     </span>
                 </span>
                 <nav class="mdl-navigation">
-                    <a class="mdl-navigation__link" href="/">
+                    <a class="mdl-navigation__link" 
+                       href="/" 
+                       ng-click="closeDrawer()">
                         <i class="material-icons" role="presentation">home</i>
                         {{ 'home' | translate }}
                     </a>
-                    <a class="mdl-navigation__link" href="/ranking">
+                    <a class="mdl-navigation__link" 
+                       href="/ranking"
+                       ng-click="closeDrawer()">
                         <i class="material-icons" role="presentation">looks_one</i>
                         {{ 'ranking' | translate }}
                     </a>
-                    <a class="mdl-navigation__link" href="/trophies">
+                    <a class="mdl-navigation__link" 
+                       href="/trophies"
+                       ng-click="closeDrawer()">
                         <i class="material-icons" role="presentation">star</i>
                         {{ 'trophies.title' | translate }}
                     </a>
@@ -129,7 +135,7 @@
 
             <div class="app-content mdl-layout__content">
                 <a name="top"></a>
-                <div class="app-grid mdl-grid" ng-view></div>
+                <div class="app-grid mdl-grid" ng-if="ready" ng-view></div>
                 <footer class="app-footer">
                     <a id="fanpage" href="https://www.facebook.com/ChessCommunity" target="_blank">{{ 'fanpage' | translate }}</a>
                 </footer>
