--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <link href="css/fonts.css" rel="stylesheet">
         <link href="css/components.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-        <link ng-if="user.lang == 'ar'" ng-href="css/style.ar.css" rel="stylesheet">
+        <link ng-if="user.lang == 'ar'" ng-href="css/style-ar.css" rel="stylesheet">
     </head>
     <body>
 
