--- a/public/index.html
+++ b/public/index.html
@@ -150,6 +150,8 @@
 
         <script src="socket.io/socket.io.js"></script>
 
+        <script src="chess.js"></script>
+
         <script src="lib/jquery.min.js"></script>
         <script src="lib/jquery-ui.min.js"></script>
 
@@ -177,6 +179,7 @@
         <script src="app/game/game.module.js"></script>
         <script src="app/game/game.controllers.js"></script>
         <script src="app/game/game.directives.js"></script>
+        <script src="app/game/game.services.js"></script>
 
         <script src="app/home/home.module.js"></script>
         <script src="app/home/home.controllers.js"></script>
