--- a/public/index.html
+++ b/public/index.html
@@ -150,6 +150,8 @@
 
         <script src="socket.io/socket.io.js"></script>
 
+        <script src="chess.js"></script>
+
         <script src="lib/jquery.min.js"></script>
         <script src="lib/jquery-ui.min.js"></script>
 
