--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
             <div class="app-content mdl-layout__content">
                 <a name="top"></a>
                 <div class="app-grid mdl-grid" ng-if="ready" ng-view></div>
-                <footer class="app-footer">
+                <footer class="app-footer" ng-class="{'is-game': isGame }">
                     <a id="fanpage" href="https://www.facebook.com/ChessCommunity" target="_blank">{{ 'fanpage' | translate }}</a>
                 </footer>
             </div>
