--- a/public/index.html
+++ b/public/index.html
@@ -63,9 +63,8 @@
             </div>
         </div>
 
-        
-        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" ng-show="!loading">
-            <header class="app-header mdl-layout__header" ng-class="{'is-game': user.gid }">
+        <div class="app-layout mdl-layout mdl-js-layout mdl-layout--fixed-header" ng-show="!loading" ng-class="{'is-user-game': user.gid, 'is-game': isGame }">
+            <header class="app-header mdl-layout__header">
                 <div class="app-header__row mdl-layout__header-row">
                     <span class="app-title mdl-layout-title">
                         <span class="app-logo">
@@ -135,7 +134,7 @@
             <div class="app-content mdl-layout__content">
                 <a name="top"></a>
                 <div class="app-grid mdl-grid" ng-if="ready" ng-view></div>
-                <footer class="app-footer" ng-class="{'is-game': isGame }">
+                <footer class="app-footer">
                     <a id="fanpage" href="https://www.facebook.com/ChessCommunity" target="_blank">{{ 'fanpage' | translate }}</a>
                 </footer>
             </div>
