--- a/public/index.html
+++ b/public/index.html
@@ -138,6 +138,10 @@
                     <a id="fanpage" href="https://www.facebook.com/ChessCommunity" target="_blank">{{ 'fanpage' | translate }}</a>
                 </footer>
             </div>
+
+            <div class="app-pagination app-pagination--fixed">
+                <pagination></pagination>
+            </div>
         </div>
           
         <div id="fb-root"></div>
