--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,8 @@
           
         <div id="fb-root"></div>
 
-         <script src="https://apis.google.com/js/api.js"></script>
+        <script src="https://apis.google.com/js/api.js"></script>
+        <script src="https://apis.google.com/js/plusone.js" async defer></script>
 
         <script src="socket.io/socket.io.js"></script>
 
